--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -55,3 +55,8 @@ body{
   font-weight: bold;
   margin-bottom: 12px
 }
+.c_ftr{
+  border-top: 1px solid #ddd;
+  margin-top: 20px;
+  padding-top: 20px
+}
